# switchbotmeter

./: .gitignore  Readme.rst  pyproject.toml  setup.py
.github/workflows/: commit.yml  pr.yml  release.yml  test.yml
src/aioswitchbotmeter/: __init__.py
src/switchbotmeter/: __about__.py  __init__.py
switchbotmeter/: __init__.py
tests/: __init__.py
tests/unit/: test_device.py
