[tool.poetry]
name = "switchbotmeter"
version = "1.0.2"
description = "SwitchBot Meter library"
license = "GPL3+"
authors = ["David Francos <opensource@davidfrancos.net>"]
readme = "Readme.rst"

[tool.poetry.dependencies]
python = "^3.8"
bluepy = "^1.3.0"
pylint = "^2.6.0"
baseconvert = "^1.0.0-alpha.4"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
pytest-flake8 = "^1.0.6"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
